--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/datvidc/yir#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.13",
+    "validator": "^13.7.0"
   }
 }
