--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/datvidc/yir#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
